# Remove_ROS_VINS

./: .gitignore  CMakeLists.txt  estimate_result_MH_01.txt
ar_demo/src/: ar_demo_node.cpp
benchmark_publisher/src/: benchmark_publisher_node.cpp
camera_model/: CMakeLists.txt
camera_model/include/: Camera.h  CameraCalibration.h  CameraFactory.h  CataCamera.h  CostFunctionFactory.h  EigenUtils.h  EquidistantCamera.h  PinholeCamera.h  ScaramuzzaCamera.h
camera_model/include/camodocal/calib/: CameraCalibration.h
camera_model/include/camodocal/camera_models/: CameraFactory.h  CostFunctionFactory.h
camera_model/src/: Camera.cc  CameraCalibration.cc  CameraFactory.cc  CataCamera.cc  Chessboard.cc  CostFunctionFactory.cc  EigenQuaternionParameterization.cc  EquidistantCamera.cc  PinholeCamera.cc  ScaramuzzaCamera.cc  Transform.cc  gpl.cc  intrinsic_calib.cc
camera_model/src/calib/: CameraCalibration.cc
camera_model/src/camera_models/: Camera.cc  CameraFactory.cc  CataCamera.cc  CostFunctionFactory.cc  EquidistantCamera.cc  PinholeCamera.cc  ScaramuzzaCamera.cc
camera_model/src/chessboard/: Chessboard.cc
camera_model/src/gpl/: EigenQuaternionParameterization.cc  gpl.cc
camera_model/src/sparse_graph/: Transform.cc
config/euroc/: euroc_config.yaml
include/: ChannelFloat32.h  Float32.h  Header.h  Imu.h  Odometry.h  Path.h  Point.h  Point32.h  PointCloud.h  Pose.h  PoseStamped.h  PoseWithCovariance.h  Quaternion.h  Time.h  Twist.h  TwistWithCovariance.h  Vector3.h
results/: 01_plot_traj_and_position_err.py  02_evo_ape_position.sh  04_evo_ape_euler.sh  05_evo_rpe_positon.sh  06_evo_rpe_euler.sh  copy_estimate_result.sh  copy_groundtruth.sh  estimate_result_MH_01.txt  estimate_result_MH_02.txt  estimate_result_MH_03.txt  estimate_result_V1_01.txt  estimate_result_V1_02.txt  estimate_result_V1_03.txt  estimate_result_V2_01.txt  estimate_result_V2_03.txt
vins_estimator/: CMakeLists.txt
vins_estimator/src/: estimator.cpp  estimator.h  estimator_node.cpp  feature_manager.cpp  feature_manager.h  parameters.cpp  parameters.h
vins_estimator/src/factor/: imu_factor.h  integration_base.h  marginalization_factor.cpp  marginalization_factor.h  pose_local_parameterization.cpp  pose_local_parameterization.h  projection_factor.cpp  projection_factor.h
vins_estimator/src/feature_tracker/: feature_tracker.cpp  feature_tracker.h
vins_estimator/src/initial/: initial_aligment.cpp  initial_alignment.h  initial_ex_rotation.cpp  initial_ex_rotation.h  initial_sfm.cpp  initial_sfm.h  solve_5pts.cpp  solve_5pts.h
vins_estimator/src/loop-closure/: DLoopDetector.h  TemplatedLoopDetector.h  demoDetector.h  keyframe.cpp  keyframe.h  keyframe_database.cpp  keyframe_database.h  loop_closure.cpp  loop_closure.h
vins_estimator/src/utility/: CameraPoseVisualization.cpp  CameraPoseVisualization.h  utility.h  visualization.cpp  visualization.h
